Namespaces fixed according to the new directory structure.

--- a/trunk/SolidOpt/src/SolidOpt.csproj
+++ b/trunk/SolidOpt/src/SolidOpt.csproj
@@ -31,22 +31,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Core" />
-    <Folder Include="Core\Configurator\Sources\Generators" />
-    <Folder Include="Core\Configurator\TypeResolvers" />
-    <Folder Include="Core\Configurator\Mappers" />
-    <Folder Include="Core\Configurator\Sources" />
-    <Folder Include="Core\Configurator\Targets" />
     <Folder Include="Core\Loader" />
     <Folder Include="Core\Loader\cache" />
-    <Folder Include="Core\Configurator" />
-    <Folder Include="Core\Providers" />
-    <Folder Include="Core\Providers\StreamProvider" />
-    <Folder Include="Core\Providers\StreamProvider\Exporters" />
-    <Folder Include="Core\Providers\StreamProvider\Importers" />
     <Folder Include="Core\Services" />
-    <Folder Include="Cache" />
-    <Folder Include="Optimizer" />
-    <Folder Include="Optimizer\Transformers" />
     <Folder Include="Services" />
     <Folder Include="Services\GUI" />
     <Folder Include="Services\Models" />
@@ -64,39 +51,7 @@
     <Folder Include="Services\Transformations" />
     <Folder Include="Services\Transformations\Multimodel" />
     <Folder Include="Services\Transformations\Optimizations" />
-    <Compile Include="Cache\CacheManager.cs" />
-    <Compile Include="Core\Configurator\Mappers\INIMaper.cs" />
-    <Compile Include="Core\Configurator\Mappers\MapManager.cs" />
-    <Compile Include="Core\Configurator\Targets\IConfigTarget.cs" />
-    <Compile Include="Core\Configurator\Targets\ILTarget.cs" />
-    <Compile Include="Core\Configurator\Targets\NMSPTarget.cs" />
-    <Compile Include="Core\Configurator\ConfigurationManager.cs" />
-    <Compile Include="Core\Configurator\Sources\ILSource.cs" />
-    <Compile Include="Core\Configurator\TypeResolvers\CannotResolve.cs" />
-    <Compile Include="Core\Configurator\TypeResolvers\ChainResolver.cs" />
-    <Compile Include="Core\Configurator\TypeResolvers\IdentityResolver.cs" />
-    <Compile Include="Core\Configurator\TypeResolvers\FloatResolver.cs" />
-    <Compile Include="Core\Configurator\TypeResolvers\IntResolver.cs" />
-    <Compile Include="Core\Configurator\TypeResolvers\ITypeResolver.cs" />
-    <Compile Include="Core\Configurator\Mappers\CustomMapperGroup.cs" />
-    <Compile Include="Core\Configurator\Mappers\IConfigMapper.cs" />
-    <Compile Include="Core\Configurator\Mappers\IdentityMapper.cs" />
-    <Compile Include="Core\Configurator\Mappers\Mapper.cs" />
-    <Compile Include="Core\Configurator\Sources\IConfigSource.cs" />
-    <Compile Include="Core\Configurator\Sources\INISource.cs" />
-    <Compile Include="Core\Configurator\Targets\INITarget.cs" />
-    <Compile Include="Core\Configurator\Sources\NMSPSource.cs" />
-    <Compile Include="Core\Configurator\TypeResolvers\Resolver.cs" />
-    <Compile Include="Core\Configurator\TypeResolvers\StringResolver.cs" />
-    <Compile Include="Core\Configurator\TypeResolvers\TypeManager.cs" />
     <Compile Include="Core\Loader\Loader.cs" />
-    <Compile Include="Core\Providers\AbstractResourceProvider.cs" />
-    <Compile Include="Core\Providers\IProvider.cs" />
-    <Compile Include="Core\Providers\StreamProvider\Exporters\FileExporter.cs" />
-    <Compile Include="Core\Providers\StreamProvider\Exporters\ISetURI.cs" />
-    <Compile Include="Core\Providers\StreamProvider\Importers\FileImporter.cs" />
-    <Compile Include="Core\Providers\StreamProvider\Importers\IGetURI.cs" />
-    <Compile Include="Core\Providers\StreamProvider\URIManager.cs" />
     <Compile Include="Core\Services\AbstractService.cs" />
     <Compile Include="Core\Services\AbstractServiceContainer.cs" />
     <Compile Include="Core\Services\AbstractServiceProvider.cs" />
@@ -105,7 +60,6 @@
     <Compile Include="Core\Services\IServiceProvider.cs" />
     <Compile Include="Core\Services\PluginServiceContainer.cs" />
     <Compile Include="Core\Services\ServiceContainer.cs" />
-    <Compile Include="Optimizer\Transformers\ITransform.cs" />
     <Compile Include="Services\Subsystems\Cache\CacheManager.cs" />
     <Compile Include="Services\Subsystems\Configurator\ConfigurationManager.cs" />
     <Compile Include="Services\Subsystems\Configurator\IConfigLoader.cs" />
@@ -129,15 +83,16 @@
     <Compile Include="Services\Subsystems\Configurator\TypeResolvers\FloatResolver.cs" />
     <Compile Include="Services\Subsystems\Configurator\TypeResolvers\IdentityResolver.cs" />
     <Compile Include="Services\Subsystems\Configurator\TypeResolvers\IntResolver.cs" />
-    <Compile Include="Services\Subsystems\Configurator\TypeResolvers\IR2Assembly.cs" />
     <Compile Include="Services\Subsystems\Configurator\TypeResolvers\ITypeResolver.cs" />
     <Compile Include="Services\Subsystems\Configurator\TypeResolvers\Resolver.cs" />
     <Compile Include="Services\Subsystems\Configurator\TypeResolvers\StringResolver.cs" />
     <Compile Include="Services\Subsystems\Configurator\TypeResolvers\TypeManager.cs" />
+    <Compile Include="Services\Subsystems\HetAccess\AbstractResourceProvider.cs" />
     <Compile Include="Services\Subsystems\HetAccess\Exporters\FileExporter.cs" />
     <Compile Include="Services\Subsystems\HetAccess\Exporters\ISetURI.cs" />
     <Compile Include="Services\Subsystems\HetAccess\Importers\FileImporter.cs" />
     <Compile Include="Services\Subsystems\HetAccess\Importers\IGetURI.cs" />
+    <Compile Include="Services\Subsystems\HetAccess\IProvider.cs" />
     <Compile Include="Services\Subsystems\HetAccess\URIManager.cs" />
     <Compile Include="Services\Transformations\ITransform.cs" />
     <ProjectReference Include="vendors\Mono.Cecil\Mono.Cecil.csproj">
