--- a/trunk/doc/Demos/Examples/NopRemover/NopRemover.csproj
+++ b/trunk/doc/Demos/Examples/NopRemover/NopRemover.csproj
@@ -54,5 +54,9 @@
       <Project>{D8F63DFF-5230-43E4-9AB2-DA6E721A1FAE}</Project>
       <Name>Mono.Cecil</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\core\src\vendors\Mono.Cecil\rocks\Mono.Cecil.Rocks.csproj">
+      <Project>{FBC6DD59-D09D-499C-B03C-99C1C78FF2AC}</Project>
+      <Name>Mono.Cecil.Rocks</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
