--- a/trunk/doc/Demos/Examples/OverflowArithmeticRemover/OverflowArithmeticRemover.csproj
+++ b/trunk/doc/Demos/Examples/OverflowArithmeticRemover/OverflowArithmeticRemover.csproj
@@ -61,13 +61,13 @@
       <Project>{3975D054-C5DC-4BE3-9213-B1BBC3630DC0}</Project>
       <Name>SolidOpt</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\core\src\vendors\Cecil.Decompiler\Cecil.Decompiler\Cecil.Decompiler.csproj">
-      <Project>{ED1BE103-1699-4116-A732-616BEB142EB2}</Project>
-      <Name>Cecil.Decompiler</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\..\core\src\vendors\Mono.Cecil\Mono.Cecil.csproj">
       <Project>{D8F63DFF-5230-43E4-9AB2-DA6E721A1FAE}</Project>
       <Name>Mono.Cecil</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\core\src\vendors\Mono.Cecil\rocks\Mono.Cecil.Rocks.csproj">
+      <Project>{FBC6DD59-D09D-499C-B03C-99C1C78FF2AC}</Project>
+      <Name>Mono.Cecil.Rocks</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
