--- a/trunk/core/src/Services/Transformations/Multimodel/CilToControlFlowGraph/CilToControlFlowGraph.csproj
+++ b/trunk/core/src/Services/Transformations/Multimodel/CilToControlFlowGraph/CilToControlFlowGraph.csproj
@@ -42,8 +42,8 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Reference Include="System" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\SolidOpt.csproj">
@@ -59,5 +59,12 @@
       <Project>{43A760A8-E789-4E27-A3C3-182CD847D07C}</Project>
       <Name>ControlFlowGraph</Name>
     </ProjectReference>
+    <Compile Include="src\ControlFlowGraphBuilder.cs" />
+    <Compile Include="src\ControlFlowGraph.cs" />
+    <Compile Include="src\Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="test\" />
+    <Folder Include="src\Properties\" />
   </ItemGroup>
 </Project>
