The problem Generic Variance is fixed in C# 4.0 but if we want to preserve the support of 2.0 we have to fix it by ourselves. Compatibility namespace added. There will be only helpers and fixups concerning the compatibility. IEnumerable<T> Variance fixup added. DecompilationPipeline rewritten to use the introduced fixup.

--- a/trunk/core/src/SolidOpt.csproj
+++ b/trunk/core/src/SolidOpt.csproj
@@ -203,5 +203,7 @@
     <Folder Include="Services\Subsystems\HetAccess\" />
     <Folder Include="Services\" />
     <Folder Include="Services\Transformations\" />
+    <Folder Include="Services\Compatibility\" />
+    <Compile Include="Services\Compatibility\FixEnumerableVariance.cs" />
   </ItemGroup>
 </Project>
