--- a/trunk/core/src/Services/Transformations/CodeModel/ControlFlowGraph/ControlFlowGraph.csproj
+++ b/trunk/core/src/Services/Transformations/CodeModel/ControlFlowGraph/ControlFlowGraph.csproj
@@ -33,6 +33,7 @@
     <Compile Include="src\ExceptionHandlerData.cs" />
     <Compile Include="src\BlockRange.cs" />
     <Compile Include="src\Properties\AssemblyInfo.cs" />
+    <Compile Include="src\ControlFlowGraph.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\vendors\Mono.Cecil\Mono.Cecil.csproj">
@@ -47,5 +48,11 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Folder Include="src\Properties\" />
+    <Folder Include="doc\" />
+    <Folder Include="meta\" />
+    <Folder Include="helper\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Core" />
   </ItemGroup>
 </Project>
