--- a/trunk/core/src/SolidOpt.csproj
+++ b/trunk/core/src/SolidOpt.csproj
@@ -137,6 +137,9 @@
     <Compile Include="Services\Transformations\Multimodel\DecompilationPipeline.cs" />
     <Compile Include="Services\Transformations\Multimodel\CompilationPipeline.cs" />
     <Compile Include="Services\Transformations\Multimodel\DecompilationStep.cs" />
+    <Folder Include="Services\Transformations\CodeModel\" />
+    <Folder Include="Services\Transformations\CodeModel\ControlFlowGraph\" />
+
     <Folder Include="Core\" />
     <Folder Include="Services\" />
     <Folder Include="Services\" />
