--- a/trunk/doc/Demos/Examples/StandardLoader/Loadee/Loadee.csproj
+++ b/trunk/doc/Demos/Examples/StandardLoader/Loadee/Loadee.csproj
@@ -70,6 +70,10 @@
       <Project>{D68133BD-1E63-496E-9EDE-4FBDBF77B486}</Project>
       <Name>Mono.Cecil</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\MethodInlineIL\MethodInlineIL.csproj">
+      <Project>{9DFD76F4-C25D-4AB8-BC5F-ED932767B84D}</Project>
+      <Name>MethodInlineIL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\MethodInliner\MethodInliner.csproj">
       <Project>{09A9101B-94C4-46F0-99B5-DA5E658C5A4E}</Project>
       <Name>MethodInliner</Name>
